--- a/index.html
+++ b/index.html
@@ -2,43 +2,49 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>SVG Icon Sets</title>
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Overpass:400,700&display=swap" rel="stylesheet">
 
 </head>
 <body class="island">
 
-  <h1 class="text-center">Mars colonization structures</h1>
+  <h1 class="text-center pad-t pad-b">Mars colonization structures</h1>
 
-  <section class="grid">
+  <section class="grid max-length grid-stretch">
 
-    <div class="unit xs-1 l-1-3">
-      <i class="icon i-192">
-          <svg><use xlink:href="/images/mars-icons.svg#mars-1" /> </svg>
-      </i>
+    <div class="unit xs-1 s-1 m-1 l-1-3 gutter unit-content-distribute pad-b">
+      <div class="center-content">
+        <i class="icon i-192">
+            <svg><use xlink:href="images/space-icon-set.svg#space-1" /> </svg>
+        </i>
+      </div>
       <h2>Space bubbles</h2>
       <p>Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
       <a class="btn btn-ghost" href="#">Learn about space bubbles</a>
     </div>
 
-    <div class="unit xs-1 l-1-3">
-      <i class="icon i-192">
-          <svg><use xlink:href="/images/mars-icons.svg#mars-2" /> </svg>
-      </i>
+    <div class="unit xs-1 s-1 m-1 l-1-3 gutter  unit-l-content-distribute pad-b">
+      <div class="center-content">
+        <i class="icon i-192">
+            <svg><use xlink:href="images/space-icon-set.svg#space-2" /> </svg>
+        </i>
+      </div>
       <h2>Super domes</h2>
       <p>Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
       <a class="btn btn-ghost" href="#">Learn about super domes</a>
     </div>
 
-    <div class="unit xs-1 l-1-3">
-      <i class="icon i-192">
-          <svg><use xlink:href="/images/mars-icons.svg#mars-3" /> </svg>
-      </i>
+    <div class="unit xs-1 s-1 m-1 l-1-3 gutter unit-content-distribute pad-b">
+      <div class="center-content">
+        <i class="icon i-192">
+            <svg><use xlink:href="images/space-icon-set.svg#space-3" /> </svg>
+        </i>
+      </div>
       <h2>Mecha-stilts</h2>
       <p>Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
       <a class="btn btn-ghost" href="#">Learn about mecha-stilts</a>
