--- a/index.html
+++ b/index.html
@@ -11,41 +11,41 @@
   <link href="https://fonts.googleapis.com/css?family=Overpass:400,700&display=swap" rel="stylesheet">
 
 </head>
-<body class="island">
+<body class="gutter">
 
-  <h1 class="text-center pad-t pad-b">Mars colonization structures</h1>
+  <h1 class="max-length zetta text-center bold pad-t-2 push-2 pad-b">Mars colonization structures</h1>
 
-  <section class="grid max-length grid-stretch">
+  <section class="grid grid-stretch">
 
-    <div class="unit xs-1 s-1 m-1 l-1-3 gutter unit-content-distribute pad-b">
-      <div class="center-content">
-        <i class="icon i-192">
+    <div class="unit xs-1 s-1 m-1 l-1-3 gutter unit-content-distribute push-2">
+      <div class="center-content ">
+        <i class="icon i-192 push">
             <svg><use xlink:href="images/space-icon-set.svg#space-1" /> </svg>
         </i>
       </div>
-      <h2>Space bubbles</h2>
+      <h2 class="push-1-2">Space bubbles</h2>
       <p>Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
       <a class="btn btn-ghost" href="#">Learn about space bubbles</a>
     </div>
 
-    <div class="unit xs-1 s-1 m-1 l-1-3 gutter  unit-l-content-distribute pad-b">
-      <div class="center-content">
-        <i class="icon i-192">
+    <div class="unit xs-1 s-1 m-1 l-1-3 gutter unit-l-content-distribute push-2">
+      <div class="center-content ">
+        <i class="icon i-192 push">
             <svg><use xlink:href="images/space-icon-set.svg#space-2" /> </svg>
         </i>
       </div>
-      <h2>Super domes</h2>
+      <h2 class="push-1-2">Super domes</h2>
       <p>Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
       <a class="btn btn-ghost" href="#">Learn about super domes</a>
     </div>
 
-    <div class="unit xs-1 s-1 m-1 l-1-3 gutter unit-content-distribute pad-b">
-      <div class="center-content">
+    <div class="unit xs-1 s-1 m-1 l-1-3 gutter unit-content-distribute push-2">
+      <div class="center-content push">
         <i class="icon i-192">
             <svg><use xlink:href="images/space-icon-set.svg#space-3" /> </svg>
         </i>
       </div>
-      <h2>Mecha-stilts</h2>
+      <h2 class="push-1-2">Mecha-stilts</h2>
       <p>Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
       <a class="btn btn-ghost" href="#">Learn about mecha-stilts</a>
     </div>
